# persistent-ai-telegram

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  tests.py
01-simplest-bot/: EXERCISES.md  GUIDE.md  README.md  bot.py
02-persistent-sessions/: EXERCISES.md  GUIDE.md  README.md  bot.py
03-personality-soul/: EXERCISES.md  GUIDE.md  README.md  SOUL.md  bot.py
04-tools-agent-loop/: EXERCISES.md  GUIDE.md  README.md  bot.py
05-permission-controls/: EXERCISES.md  GUIDE.md  README.md  bot.py
06-gateway/: EXERCISES.md  GUIDE.md  README.md  bot.py
07-context-compaction/: EXERCISES.md  GUIDE.md  README.md  bot.py
08-long-term-memory/: EXERCISES.md  GUIDE.md  README.md  bot.py
09-concurrency-scheduling/: EXERCISES.md  GUIDE.md  README.md  bot.py
10-multi-agent-integration/: EXERCISES.md  GUIDE.md  README.md  mini-openclaw.py
